--- a/css/vertical.css
+++ b/css/vertical.css
@@ -1,33 +1,25 @@
-
 .tab {
     overflow: hidden;
     float: left;
     width: 250px;
     border: 2px solid white;
+    position: absolute;
+    top: 0;
+    left: 0;
 
 }
 
-.tab button {
+.tab a {
     display: block;
     background-color: inherit;
     color: white;
-    padding: 44px 32px;
-    width: 100%;
-    border: none;
+    padding: 33px 32px;
+    width: 200px;
     outline: none;
     text-align: center;
     transition: 0.3s;
-    font-size: 20px;
+    font-size: 18px;
     font-family: Monospace, Courier New;
-
 }
 
 
-.content {
-    float:left;
-    padding: 3px 15px;
-    width: 70%;
-    border-left: none;
-    height: 300px;
-
-}
