--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,7 @@
     color: white;
     padding: 30px;
     width: 110%;
-    height: 100vh;
+    height: 100px;
     position: absolute;
     top: -20;
 
@@ -18,7 +18,7 @@
     top: 0;
     left: 0;
     background-color: black;
-    height: 100%;
+    height: 1000px;
 
 
 }
