--- a/css/header.css
+++ b/css/header.css
@@ -1,7 +1,8 @@
 
 .header {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    width: 100%;
     color: white;
-    height: 50px;
     text-align: center;
     padding: 50px 0;
     border: 2px solid white;
